vlib/v/checker/tests/decompose_type_err.vv
fn varargs(a ...int) { println(a) }

fn main() {
	varargs(...123)
}
